--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -96,8 +96,13 @@
                     <h5 class="mb-0">Informations générales</h5>
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title"><i class="fas fa-folder"></i>{{ intervention.doleance.ndi }}</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{ intervention.doleance.station.client }} - {{ intervention.doleance.station.libelle_station }}</h6>
+                    <h5 class="card-title"><i class="fas fa-folder">
+                        </i>&nbsp;{{ intervention.doleance.ndi }}&nbsp; <bold>{{ intervention.doleance.statut }}</bold>
+                        </h5>
+                    <h6 class="card-subtitle mb-2 text-muted">
+                    {{ intervention.doleance.station.client }}
+                    - {{ intervention.doleance.station.libelle_station }}
+                    </h6>
                     <p class="card-text">{{ intervention.doleance.panne_declarer }}</p>
                     {% if not intervention.is_done %}
                      {% csrf_token %}
