--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -97,7 +97,8 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title"><i class="fas fa-folder">
-                        </i>&nbsp;{{ intervention.doleance.ndi }}&nbsp; <bold>{{ intervention.doleance.statut }}</bold>
+                        </i>&nbsp;{{ intervention.doleance.ndi }}&nbsp;
+                        <bold>{{ intervention.doleance.statut }}</bold>
                         </h5>
                     <h6 class="card-subtitle mb-2 text-muted">
                     {{ intervention.doleance.station.client }}
