--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -92,7 +92,7 @@
                                 <th>NDI</th>
                                 <th>Station</th>
                                 <th>Panne</th>
-                                <th>Prise en charge</th>
+                                <th>FI</th>
                                 <th>Début travail</th>
                                 <th>Fin travail</th>
                                 <th>Statut</th>
@@ -154,7 +154,7 @@
                         {data: 'ndi'},
                         {data: 'station'},
                         {data: 'panne'},
-                        {data: 'prise_en_charge'},
+                        {data: 'FI'},
                         {data: 'debut_travail'},
                         {data: 'fin_travail'},
                         {data: 'statut'},
