--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -154,7 +154,7 @@
                         {data: 'ndi'},
                         {data: 'station'},
                         {data: 'panne'},
-                        {data: 'fiche_intervention'},
+                        {data: 'numero_fiche'},
                         {data: 'debut_travail'},
                         {data: 'fin_travail'},
                         {data: 'statut'},
