--- a/gmao/static/gmao/css/main.css
+++ b/gmao/static/gmao/css/main.css
@@ -187,7 +187,7 @@ table.dataTable tbody tr.status-NEW {
 }
 
 table.dataTable tbody tr.status-ATT {
-    background-color: #eab819 !important;
+    background-color: #c1bc69 !important;
 }
 
 /*Panne Déclarée*/
