--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -209,7 +209,7 @@
         </div>
 
         <!-- Carte de la jauge -->
-        {% comment %}<div class="col-md-6 mb-4">
+        <div class="col-md-6 mb-4">
             <div class="card">
                 <div class="card-header bg-warning text-dark">
                     <h5 class="mb-0">Jauge de progression</h5>
@@ -220,7 +220,7 @@
                     </div>
                 </div>
             </div>
-        </div>{% endcomment %}
+        </div>
 
 
 
