--- a/gmao_teams/templates/gmao_teams/gestion_equipes.html
+++ b/gmao_teams/templates/gmao_teams/gestion_equipes.html
@@ -46,10 +46,18 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h4>Techniciens de l'équipe</h4>
+                                <div id="technicienEquipeSpinner" class="spinner-border text-primary" role="status"
+                                     style="display: none;">
+                                    <span class="sr-only">Chargement...</span>
+                                </div>
                                 <ul id="listeTechniciens" class="list-group mb-3"></ul>
                             </div>
                             <div class="col-md-6">
                                 <h4>Techniciens disponibles</h4>
+                                <div id="technicienDispoSpinner" class="spinner-border text-primary" role="status"
+                                     style="display: none;">
+                                    <span class="sr-only">Chargement...</span>
+                                </div>
                                 <ul id="listeTechniciensDisponibles" class="list-group mb-3"
                                     style="max-height: 300px; overflow-y: auto;"></ul>
                             </div>
