--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.7/css/responsive.dataTables.min.css">
 
     {% block extra_css %}{% endblock extra_css %}
-    <title>{% block title %}M E I {% endblock title %}</title>
+    <title>MEI | {% block title %}G M A O {% endblock title %}</title>
 </head>
 <body>
 <div class="wrapper">
